# MenuExtraction

./: .gitignore  main.py  prompt.yaml  pyproject.toml  requirements.txt  streamlit.py
backend/: extractor.py  main.py
backend/prompts/: phase1.j2  phase4.j2
backend/utils/: client.py  model.py  processing.py
example/: app.py
prompts/: phase2.j2  phase3.j2
utils/: client.py  model.py
